--- a/src/vcf-enhanced-date-picker-helper.html
+++ b/src/vcf-enhanced-date-picker-helper.html
@@ -7,7 +7,7 @@ This program is available under Apache License Version 2.0, available at https:/
 <script>
   window.Vaadin = window.Vaadin || {};
 
-  Vaadin.DatePickerHelper = class VaadinDatePickerHelper {
+  Vaadin.DatePickerHelper = class VcfEnhancedDatePickerHelper {
     /**
      * Get ISO 8601 week number for the given date.
      *
