--- a/src/vcf-enhanced-date-picker-light.html
+++ b/src/vcf-enhanced-date-picker-light.html
@@ -8,11 +8,11 @@ This program is available under Apache License Version 2.0, available at https:/
 <link rel="import" href="../../iron-media-query/iron-media-query.html">
 <link rel="import" href="../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 <link rel="import" href="../../vaadin-themable-mixin/vaadin-theme-property-mixin.html">
-<link rel="import" href="vaadin-date-picker-overlay.html">
-<link rel="import" href="vaadin-date-picker-overlay-content.html">
-<link rel="import" href="vaadin-date-picker-mixin.html">
+<link rel="import" href="vcf-enhanced-date-picker-overlay.html">
+<link rel="import" href="vcf-enhanced-date-picker-overlay-content.html">
+<link rel="import" href="vcf-enhanced-date-picker-mixin.html">
 
-<dom-module id="vaadin-date-picker-light">
+<dom-module id="vcf-enhanced-date-picker-light">
   <template>
     <style>
       :host {
@@ -25,7 +25,7 @@ This program is available under Apache License Version 2.0, available at https:/
     </style>
     <slot></slot>
 
-    <vaadin-date-picker-overlay
+    <vcf-enhanced-date-picker-overlay
         id="overlay"
         fullscreen$=[[_fullscreen]]
         opened="{{opened}}"
@@ -34,7 +34,7 @@ This program is available under Apache License Version 2.0, available at https:/
         on-vaadin-overlay-close="_onOverlayClosed"
         theme$="[[__getOverlayTheme(theme, _overlayInitialized)]]">
       <template>
-        <vaadin-date-picker-overlay-content
+        <vcf-enhanced-date-picker-overlay-content
           id="overlay-content" i18n="[[i18n]]"
           fullscreen$=[[_fullscreen]]
           label=[[label]]
@@ -48,9 +48,9 @@ This program is available under Apache License Version 2.0, available at https:/
           role="dialog"
           part="overlay-content"
           theme$="[[__getOverlayTheme(theme, _overlayInitialized)]]">
-        </vaadin-date-picker-overlay-content>
+        </vcf-enhanced-date-picker-overlay-content>
       </template>
-    </vaadin-date-picker-overlay>
+    </vcf-enhanced-date-picker-overlay>
 
     <iron-media-query
         query="[[_fullscreenMediaQuery]]"
@@ -61,7 +61,7 @@ This program is available under Apache License Version 2.0, available at https:/
     (function() {
       /**
        *
-       * `<vaadin-date-picker-light>` is a customizable version of the `<vaadin-date-picker>` providing
+       * `<vcf-enhanced-date-picker-light>` is a customizable version of the `<vcf-enhanced-date-picker>` providing
        * only the scrollable month calendar view and leaving the input field definition to the user.
        *
        * To create a custom input field, you need to add a child element which has a two-way
@@ -70,21 +70,21 @@ This program is available under Apache License Version 2.0, available at https:/
        * using an `<input>` element extended with `iron-input`.
        *
        * ```html
-       * <vaadin-date-picker-light>
+       * <vcf-enhanced-date-picker-light>
        *   <iron-input>
        *     <input/>
        *   </iron-input>
-       * </vaadin-date-picker-light>
+       * </vcf-enhanced-date-picker-light>
        * ```
        *
        * If you are using other custom input fields like `<paper-input>`, you
        * need to define the name of value property using the `attrForValue` property.
        *
        * ```html
-       * <vaadin-date-picker-light attr-for-value="value">
+       * <vcf-enhanced-date-picker-light attr-for-value="value">
        *   <paper-input label="Birthday">
        *   </paper-input>
-       * </vaadin-date-picker-light>
+       * </vcf-enhanced-date-picker-light>
        * ```
        *
        * ### Styling
@@ -93,18 +93,18 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * Part name | Description | Theme for Element
        * ----------------|----------------|----------------
-       * `overlay-content` | The overlay element | vaadin-date-picker-light
+       * `overlay-content` | The overlay element | vcf-enhanced-date-picker-light
        *
        * See [ThemableMixin – how to apply styles for shadow parts](https://github.com/vaadin/vaadin-themable-mixin/wiki)
        *
-       * In addition to `<vaadin-date-picker-light>` itself, the following
+       * In addition to `<vcf-enhanced-date-picker-light>` itself, the following
        * internal components are themable:
        *
-       * - `<vaadin-date-picker-overlay>`
-       * - `<vaadin-date-picker-overlay-content>`
-       * - `<vaadin-month-calendar>`
+       * - `<vcf-enhanced-date-picker-overlay>`
+       * - `<vcf-enhanced-date-picker-overlay-content>`
+       * - `<vcf-enhanced-month-calendar>`
        *
-       * Note: the `theme` attribute value set on `<vaadin-date-picker-light>`
+       * Note: the `theme` attribute value set on `<vcf-enhanced-date-picker-light>`
        * is propagated to the internal themable components listed above.
        *
        * @memberof Vaadin
@@ -117,7 +117,7 @@ This program is available under Apache License Version 2.0, available at https:/
           Vaadin.ThemePropertyMixin(
             Vaadin.DatePickerMixin(Polymer.Element))) {
         static get is() {
-          return 'vaadin-date-picker-light';
+          return 'vcf-enhanced-date-picker-light';
         }
 
         static get properties() {
