--- a/src/vcf-enhanced-month-calendar.html
+++ b/src/vcf-enhanced-month-calendar.html
@@ -7,10 +7,10 @@ This program is available under Apache License Version 2.0, available at https:/
 <link rel="import" href="../../polymer/polymer-element.html">
 <link rel="import" href="../../polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../../polymer/lib/mixins/gesture-event-listeners.html">
-<link rel="import" href="vaadin-date-picker-helper.html">
+<link rel="import" href="vcf-enhanced-date-picker-helper.html">
 <link rel="import" href="../../vaadin-themable-mixin/vaadin-themable-mixin.html">
 
-<dom-module id="vaadin-month-calendar">
+<dom-module id="vcf-enhanced-month-calendar">
   <template>
     <style>
       :host {
@@ -96,7 +96,7 @@ This program is available under Apache License Version 2.0, available at https:/
       class MonthCalendarElement extends Vaadin.ThemableMixin(Polymer.GestureEventListeners(Polymer.Element)) {
 
         static get is() {
-          return 'vaadin-month-calendar';
+          return 'vcf-enhanced-month-calendar';
         }
 
         static get properties() {
