--- a/test/basic.html
+++ b/test/basic.html
@@ -7,7 +7,7 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
 
-  <link rel="import" href="../vaadin-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
   <link rel="import" href="not-animated-styles.html">
   <script src="common.js"></script>
 </head>
@@ -16,13 +16,13 @@
 
   <test-fixture id="datepicker">
     <template>
-      <vaadin-date-picker></vaadin-date-picker>
+      <vcf-enhanced-date-picker></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
   <test-fixture id="datepicker-prefix">
     <template>
-      <vaadin-date-picker><div slot="prefix">foo</div></vaadin-date-picker>
+      <vcf-enhanced-date-picker><div slot="prefix">foo</div></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
@@ -30,7 +30,7 @@
     <template>
       <div style="height: 100px; overflow: scroll;">
         <div style="height: 1000px;">
-          <vaadin-date-picker></vaadin-date-picker>
+          <vcf-enhanced-date-picker></vcf-enhanced-date-picker>
         </div>
       </div>
     </template>
@@ -39,14 +39,14 @@
   <test-fixture id="datepicker-in-flexbox">
     <template>
       <div style="display: flex; flex-direction: column; width:500px;">
-        <vaadin-date-picker></vaadin-date-picker>
+        <vcf-enhanced-date-picker></vcf-enhanced-date-picker>
       </div>
     </template>
   </test-fixture>
 
   <test-fixture id="datepicker-clear-button-visible">
     <template>
-      <vaadin-date-picker clear-button-visible></vaadin-date-picker>
+      <vcf-enhanced-date-picker clear-button-visible></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
@@ -309,7 +309,7 @@
           datepicker.close();
 
           var container = fixture('datepicker-wrapped');
-          var datepickerWrapped = container.querySelector('vaadin-date-picker');
+          var datepickerWrapped = container.querySelector('vcf-enhanced-date-picker');
 
           open(datepickerWrapped, () => {
             sinon.stub(datepickerWrapped, '_updateAlignmentAndPosition', () => {
@@ -322,7 +322,7 @@
           });
         });
 
-        if (!ios) { // https://github.com/vaadin/vaadin-date-picker/issues/330
+        if (!ios) { // https://github.com/vaadin/vcf-enhanced-date-picker/issues/330
           it('should not realign on year/month scroll', done => {
             var spy = sinon.spy(datepicker, '_updateAlignmentAndPosition');
             getOverlayContent(datepicker).$.yearScroller.$.scroller.scrollTop += 100;
@@ -347,7 +347,7 @@
 
         it('should match the parent width', () => {
           var container = fixture('datepicker-wrapped').querySelector('div');
-          var datepickerWrapped = container.querySelector('vaadin-date-picker');
+          var datepickerWrapped = container.querySelector('vcf-enhanced-date-picker');
           container.style.width = '120px';
           datepickerWrapped.style.width = '100%';
           expect(datepickerWrapped.$.input.clientWidth).to.equal(120);
@@ -442,7 +442,7 @@
         });
 
         it('should notify i18n mutation to children', () => {
-          var monthCalendar = overlayContent.$.monthScroller.querySelector('vaadin-month-calendar');
+          var monthCalendar = overlayContent.$.monthScroller.querySelector('vcf-enhanced-month-calendar');
           var weekdays = monthCalendar.$.monthGrid.querySelectorAll('[part="weekday"]:not(:empty)');
           var weekdayLabels = Array.prototype.map.call(weekdays,
             weekday => weekday.getAttribute('aria-label'));
@@ -603,7 +603,7 @@
       describe('Inside flexbox', () => {
         it('date-picker should stretch to fit the column flex container', () => {
           const container = fixture('datepicker-in-flexbox');
-          const flexDatePicker = container.querySelector('vaadin-date-picker');
+          const flexDatePicker = container.querySelector('vcf-enhanced-date-picker');
           expect(window.getComputedStyle(container).width).to.eql('500px');
           expect(window.getComputedStyle(flexDatePicker).width).to.eql('500px');
         });
