--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -7,7 +7,7 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../iron-test-helpers/mock-interactions.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
-  <link rel="import" href="../vaadin-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
   <link rel="import" href="not-animated-styles.html">
   <script src="common.js"></script>
 </head>
@@ -16,25 +16,25 @@
 
   <test-fixture id="datepicker">
     <template>
-      <vaadin-date-picker style="position: fixed;"></vaadin-date-picker>
+      <vcf-enhanced-date-picker style="position: fixed;"></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
   <test-fixture id="datepicker-wrapped">
     <template>
-      <vaadin-date-picker-wrapper></vaadin-date-picker-wrapper>
+      <vcf-enhanced-date-picker-wrapper></vcf-enhanced-date-picker-wrapper>
     </template>
   </test-fixture>
 
-  <dom-module id="vaadin-date-picker-wrapper">
+  <dom-module id="vcf-enhanced-date-picker-wrapper">
     <template>
-      <vaadin-date-picker id="datepicker" label="foo" clear-button-visible>
-      </vaadin-date-picker>
+      <vcf-enhanced-date-picker id="datepicker" label="foo" clear-button-visible>
+      </vcf-enhanced-date-picker>
     </template>
     <script>
-      customElements.whenDefined('vaadin-date-picker').then(() => {
+      customElements.whenDefined('vcf-enhanced-date-picker').then(() => {
         Polymer({
-          is: 'vaadin-date-picker-wrapper'
+          is: 'vcf-enhanced-date-picker-wrapper'
         });
       });
     </script>
