--- a/test/visual/dropdown.html
+++ b/test/visual/dropdown.html
@@ -17,7 +17,7 @@
     </template>
   </dom-module>
 
-  <dom-module id="month-calendar-test-styles" theme-for="vaadin-month-calendar">
+  <dom-module id="month-calendar-test-styles" theme-for="vcf-enhanced-month-calendar">
     <template>
       <style>
         :host(:not([focused])) [part="date"][focused]::before {
@@ -29,7 +29,7 @@
 
   <script>
     const theme = window.location.search.replace(/.*theme=(\w+).*/, '$1') || 'lumo';
-    document.write(`<link rel="import" href="../../theme/${theme}/vaadin-date-picker.html">`);
+    document.write(`<link rel="import" href="../../theme/${theme}/vcf-enhanced-date-picker.html">`);
   </script>
 </head>
 
@@ -37,24 +37,24 @@
 
   <div id="dropdown-tests" style="padding: 10px;">
     Plain
-    <vaadin-date-picker id="plain" initial-position="2013-04-27"></vaadin-date-picker>
+    <vcf-enhanced-date-picker id="plain" initial-position="2013-04-27"></vcf-enhanced-date-picker>
 
     <br>Pre-selected value
-    <vaadin-date-picker value="1991-12-20" id="selected-value"></vaadin-date-picker>
+    <vcf-enhanced-date-picker value="1991-12-20" id="selected-value"></vcf-enhanced-date-picker>
 
     <br>Date limit
-    <vaadin-date-picker min="2017-06-10" max="2017-06-29" initial-position="2017-06-15" id="date-limit"></vaadin-date-picker>
+    <vcf-enhanced-date-picker min="2017-06-10" max="2017-06-29" initial-position="2017-06-15" id="date-limit"></vcf-enhanced-date-picker>
 
     <br>Week numbers
-    <vaadin-date-picker show-week-numbers id="weeks" initial-position="2018-04-28"></vaadin-date-picker>    
+    <vcf-enhanced-date-picker show-week-numbers id="weeks" initial-position="2018-04-28"></vcf-enhanced-date-picker>    
   </div>
 
   <script>
     window.addEventListener('WebComponentsReady', function() {
-      var datepicker = document.querySelector('vaadin-date-picker#weeks');
+      var datepicker = document.querySelector('vcf-enhanced-date-picker#weeks');
       datepicker.set('i18n.firstDayOfWeek', 1);
 
-      [].forEach.call(document.querySelectorAll('vaadin-date-picker'), function(d) {
+      [].forEach.call(document.querySelectorAll('vcf-enhanced-date-picker'), function(d) {
         d.$.input.addEventListener('focus', function(e) {
           // Make sure the input doesn't have a blinking caret that might fail the test
           e.target.blur();
@@ -68,7 +68,7 @@
     });
 
     function closeDatePickers() {
-      var datePickers = document.querySelectorAll('vaadin-date-picker');
+      var datePickers = document.querySelectorAll('vcf-enhanced-date-picker');
 
       [].forEach.call(datePickers, function(datePicker) {
         datePicker.close();
