--- a/theme/material/vcf-enhanced-month-calendar-styles.html
+++ b/theme/material/vcf-enhanced-month-calendar-styles.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../vaadin-material-styles/color.html">
 <link rel="import" href="../../../vaadin-material-styles/typography.html">
 
-<dom-module id="material-date-picker-month-calendar" theme-for="vaadin-month-calendar">
+<dom-module id="material-date-picker-month-calendar" theme-for="vcf-enhanced-month-calendar">
   <template>
     <style>
       :host {
