--- a/demo/date-picker-styling-demos.html
+++ b/demo/date-picker-styling-demos.html
@@ -19,11 +19,11 @@
             text-align: center;
           }
         </style>
-        <vaadin-date-picker-light class="my-input1">
+        <vcf-enhanced-date-picker-light class="my-input1">
           <iron-input>
             <input placeholder="Date" size="10"/>
           </iron-input>
-        </vaadin-date-picker-light>
+        </vcf-enhanced-date-picker-light>
       </template>
     </vaadin-demo-snippet>
 
@@ -36,7 +36,7 @@
             background: none;
           }
         </style>
-        <vaadin-date-picker-light>
+        <vcf-enhanced-date-picker-light>
          <div class="my-input2">
            <iron-icon icon="event"></iron-icon>
            CHECK-IN:
@@ -45,7 +45,7 @@
            </iron-input>
 
          </div>
-        </vaadin-date-picker-light>
+        </vcf-enhanced-date-picker-light>
       </template>
     </vaadin-demo-snippet>
 
@@ -53,7 +53,7 @@
     <h3>Small Text Field</h3>
     <vaadin-demo-snippet id="date-picker-styling-demos-small-text-field">
       <template preserve-content>
-        <vaadin-date-picker theme="small" label="Select date"></vaadin-date-picker>
+        <vcf-enhanced-date-picker theme="small" label="Select date"></vcf-enhanced-date-picker>
       </template>
     </vaadin-demo-snippet>
 
@@ -61,7 +61,7 @@
     <h3>Custom Theme Variant</h3>
     <vaadin-demo-snippet id="date-picker-styling-demos-small-text-field">
       <template preserve-content>
-        <dom-module id="custom-date-picker" theme-for="vaadin-text-field vaadin-date-picker-overlay-content">
+        <dom-module id="custom-date-picker" theme-for="vaadin-text-field vcf-enhanced-date-picker-overlay-content">
           <template>
             <style>
               :host([theme~="custom"]) {
@@ -70,7 +70,7 @@
             </style>
           </template>
         </dom-module>
-        <vaadin-date-picker theme="custom" label="Select date"></vaadin-date-picker>
+        <vcf-enhanced-date-picker theme="custom" label="Select date"></vcf-enhanced-date-picker>
       </template>
     </vaadin-demo-snippet>
 
