--- a/demo/date-picker-validation-demos.html
+++ b/demo/date-picker-validation-demos.html
@@ -7,11 +7,11 @@
     </style>
 
     <h3>Using as a Form Field</h3>
-    <vaadin-demo-snippet id="date-picker-validation-demos-using-as-a-form-field" when-defined="vaadin-date-picker">
+    <vaadin-demo-snippet id="date-picker-validation-demos-using-as-a-form-field" when-defined="vcf-enhanced-date-picker">
       <template preserve-content>
         <iron-form>
           <form method="post">
-            <vaadin-date-picker name="date" required error-message="This field is required"></vaadin-date-picker>
+            <vcf-enhanced-date-picker name="date" required error-message="This field is required"></vcf-enhanced-date-picker>
             <vaadin-button>Submit</vaadin-button>
           </form>
         </iron-form>
@@ -40,9 +40,9 @@
     <h3>Custom Validator</h3>
     <p>Extend <code>Vaadin.DatePickerElement</code> to create your own custom element,
        then override the <code>checkValidity(value)</code> method to validate the input.</p>
-    <vaadin-demo-snippet id="date-picker-validation-demos-custom-validator" ignore-ie when-defined="vaadin-date-picker">
+    <vaadin-demo-snippet id="date-picker-validation-demos-custom-validator" ignore-ie when-defined="vcf-enhanced-date-picker">
       <template preserve-content>
-        <vaadin-date-picker-current-year></vaadin-date-picker-current-year>
+        <vcf-enhanced-date-picker-current-year></vcf-enhanced-date-picker-current-year>
 
         <script>
           window.addDemoReadyListener('#date-picker-validation-demos-custom-validator', function(document) {
@@ -52,8 +52,8 @@
                 return new Date(value).getFullYear() === currentYear;
               }
             }
-            if (!customElements.get('vaadin-date-picker-current-year')) {
-              customElements.define('vaadin-date-picker-current-year', DatePickerCurrentYearElement);
+            if (!customElements.get('vcf-enhanced-date-picker-current-year')) {
+              customElements.define('vcf-enhanced-date-picker-current-year', DatePickerCurrentYearElement);
             }
           });
         </script>
