--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <title>vaadin-date-picker Examples</title>
+  <title>vcf-enhanced-date-picker Examples</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="../../polymer/polymer.html">
@@ -20,8 +20,8 @@
   <link rel="import" href="../../iron-input/iron-input.html">
   <link rel="import" href="../../vaadin-button/vaadin-button.html">
   <link rel="import" href="../../iron-form/iron-form.html">
-  <link rel="import" href="../vaadin-date-picker.html">
-  <link rel="import" href="../vaadin-date-picker-light.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker-light.html">
   <link rel="import" href="../../vaadin-custom-field/vaadin-custom-field.html">
 
   <custom-style>
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <dom-module id="custom-font" theme-for="vaadin-text-field vaadin-date-picker-overlay-content">
+  <dom-module id="custom-font" theme-for="vaadin-text-field vcf-enhanced-date-picker-overlay-content">
     <template>
       <style>
         :host([theme~="custom"]) {
