--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>vaadin-date-picker</title>
+  <title>vcf-enhanced-date-picker</title>
 
   <script src="../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../polymer/polymer-element.html">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <iron-component-page src="vaadin-date-picker.html"></iron-component-page>
+  <iron-component-page src="vcf-enhanced-date-picker.html"></iron-component-page>
 </body>
 
 </html>
