--- a/test/index.html
+++ b/test/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>vaadin-date-picker tests</title>
+  <title>vcf-enhanced-date-picker tests</title>
   <script src="../../web-component-tester/browser.js"></script>
   <script src="test-suites.js"></script>
 </head>
 
 <body>
   <script>
-    WCT.loadSuites(window.VaadinDatePickerSuites);
+    WCT.loadSuites(window.VcfEnhancedDatePickerSuites);
   </script>
 </body>
 
