--- a/test/keyboard-input.html
+++ b/test/keyboard-input.html
@@ -9,7 +9,7 @@
   <script src="../../iron-test-helpers/mock-interactions.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
 
-  <link rel="import" href="../vaadin-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
   <link rel="import" href="not-animated-styles.html">
 </head>
 
@@ -17,7 +17,7 @@
 
   <test-fixture id="datepicker">
     <template>
-      <vaadin-date-picker></vaadin-date-picker>
+      <vcf-enhanced-date-picker></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
@@ -378,7 +378,7 @@
               inputText('1/2/2000 ');
               arrowDown();
               arrowDown();
-              const overlayContent = datepicker.$.overlay.content.querySelector('vaadin-date-picker-overlay-content').$.monthScroller;
+              const overlayContent = datepicker.$.overlay.content.querySelector('vcf-enhanced-date-picker-overlay-content').$.monthScroller;
               target = overlayContent;
               esc();
               expect(datepicker.opened).to.be.false;
