--- a/test/keyboard-navigation.html
+++ b/test/keyboard-navigation.html
@@ -9,7 +9,7 @@
   <script src="../../iron-test-helpers/mock-interactions.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
 
-  <link rel="import" href="../vaadin-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
   <link rel="import" href="not-animated-styles.html">
 </head>
 
@@ -17,13 +17,13 @@
 
   <test-fixture id="datepicker">
     <template>
-      <vaadin-date-picker value="2000-01-01"></vaadin-date-picker>
+      <vcf-enhanced-date-picker value="2000-01-01"></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
   <test-fixture id="overlay">
     <template>
-      <vaadin-date-picker-overlay-content></vaadin-date-picker-overlay-content>
+      <vcf-enhanced-date-picker-overlay-content></vcf-enhanced-date-picker-overlay-content>
     </template>
   </test-fixture>
 
