--- a/test/month-calendar.html
+++ b/test/month-calendar.html
@@ -7,19 +7,19 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
 
-  <link rel="import" href="../src/vaadin-month-calendar.html">
+  <link rel="import" href="../src/vcf-enhanced-month-calendar.html">
   <script src="common.js"></script>
 </head>
 
 <body>
   <test-fixture id="default">
     <template>
-      <vaadin-month-calendar></vaadin-month-calendar>
+      <vcf-enhanced-month-calendar></vcf-enhanced-month-calendar>
     </template>
   </test-fixture>
 
   <script>
-    describe('vaadin-month-calendar', () => {
+    describe('vcf-enhanced-month-calendar', () => {
       var monthCalendar;
       var valueChangedSpy;
 
