--- a/test/visual/default.html
+++ b/test/visual/default.html
@@ -6,10 +6,10 @@
   <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
   <script>
     const theme = window.location.search.replace(/.*theme=(\w+).*/, '$1') || 'lumo';
-    document.write(`<link rel="import" href="../../theme/${theme}/vaadin-date-picker.html">`);
+    document.write(`<link rel="import" href="../../theme/${theme}/vcf-enhanced-date-picker.html">`);
 
     window.addEventListener('WebComponentsReady', function() {
-      customElements.whenDefined('vaadin-date-picker').then(() => {
+      customElements.whenDefined('vcf-enhanced-date-picker').then(() => {
         window.ShadyDOM && window.ShadyDOM.flush(); // Force DOM composition
         window.webComponentsAreReady = true; // Checked in gemini before capture callback
       });
@@ -21,26 +21,26 @@
 
   <div id="default-tests" style="padding: 10px;">
     Plain
-    <vaadin-date-picker></vaadin-date-picker>
+    <vcf-enhanced-date-picker></vcf-enhanced-date-picker>
 
     <br>Label
-    <vaadin-date-picker label="Pick a date"></vaadin-date-picker>
+    <vcf-enhanced-date-picker label="Pick a date"></vcf-enhanced-date-picker>
 
     <br>Placeholder
-    <vaadin-date-picker placeholder="Pick a date"></vaadin-date-picker>
+    <vcf-enhanced-date-picker placeholder="Pick a date"></vcf-enhanced-date-picker>
 
     <br>Disabled
-    <vaadin-date-picker disabled></vaadin-date-picker>
+    <vcf-enhanced-date-picker disabled></vcf-enhanced-date-picker>
 
     <br>Read-only
-    <vaadin-date-picker readonly></vaadin-date-picker>
+    <vcf-enhanced-date-picker readonly></vcf-enhanced-date-picker>
 
     <br>Value
-    <vaadin-date-picker value="1991-12-20"></vaadin-date-picker>
+    <vcf-enhanced-date-picker value="1991-12-20"></vcf-enhanced-date-picker>
 
     <br>Clear button visible
-    <vaadin-date-picker clear-button-visible></vaadin-date-picker>
-    <vaadin-date-picker clear-button-visible value="1991-12-20"></vaadin-date-picker>
+    <vcf-enhanced-date-picker clear-button-visible></vcf-enhanced-date-picker>
+    <vcf-enhanced-date-picker clear-button-visible value="1991-12-20"></vcf-enhanced-date-picker>
   </div>
 
 </body>
