--- a/test/wai-aria.html
+++ b/test/wai-aria.html
@@ -7,11 +7,11 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../test-fixture/test-fixture.html">
 
-  <link rel="import" href="../vaadin-date-picker.html">
-  <link rel="import" href="../vaadin-date-picker-light.html">
-  <link rel="import" href="../src/vaadin-date-picker-overlay.html">
-  <link rel="import" href="../src/vaadin-date-picker-overlay-content.html">
-  <link rel="import" href="../src/vaadin-month-calendar.html">
+  <link rel="import" href="../vcf-enhanced-date-picker.html">
+  <link rel="import" href="../vcf-enhanced-date-picker-light.html">
+  <link rel="import" href="../src/vcf-enhanced-date-picker-overlay.html">
+  <link rel="import" href="../src/vcf-enhanced-date-picker-overlay-content.html">
+  <link rel="import" href="../src/vcf-enhanced-month-calendar.html">
   <link rel="import" href="not-animated-styles.html">
   <script src="common.js"></script>
 </head>
@@ -20,27 +20,27 @@
 
   <test-fixture id="datepicker">
     <template>
-      <vaadin-date-picker label="ariatest"></vaadin-date-picker>
+      <vcf-enhanced-date-picker label="ariatest"></vcf-enhanced-date-picker>
     </template>
   </test-fixture>
 
   <test-fixture id="datepickerLight">
     <template>
-      <vaadin-date-picker-light>
+      <vcf-enhanced-date-picker-light>
         <input>
-      </vaadin-date-picker-light>
+      </vcf-enhanced-date-picker-light>
     </template>
   </test-fixture>
 
   <test-fixture id="overlay">
     <template>
-      <vaadin-date-picker-overlay-content></vaadin-date-picker-overlay-content>
+      <vcf-enhanced-date-picker-overlay-content></vcf-enhanced-date-picker-overlay-content>
     </template>
   </test-fixture>
 
   <test-fixture id="month-calendar">
     <template>
-      <vaadin-month-calendar></vaadin-month-calendar>
+      <vcf-enhanced-month-calendar></vcf-enhanced-month-calendar>
     </template>
   </test-fixture>
 
