--- a/theme/lumo/vcf-enhanced-date-picker-overlay-content-styles.html
+++ b/theme/lumo/vcf-enhanced-date-picker-overlay-content-styles.html
@@ -6,7 +6,7 @@
 
 <link rel="import" href="../../../vaadin-button/theme/lumo/vaadin-button.html">
 
-<dom-module id="lumo-date-picker-overlay-content" theme-for="vaadin-date-picker-overlay-content">
+<dom-module id="lumo-date-picker-overlay-content" theme-for="vcf-enhanced-date-picker-overlay-content">
   <template>
     <style>
       :host {
@@ -29,14 +29,14 @@
             + date cell heights
             + small margin between month calendars
         */
-        --vaadin-infinite-scroller-item-height:
+        --vcf-enhanced-infinite-scroller-item-height:
           calc(
               var(--lumo-font-size-l) + var(--lumo-space-m)
             + var(--lumo-font-size-xs) + var(--lumo-space-s)
             + var(--lumo-size-m) * 6
             + var(--lumo-space-s)
           );
-        --vaadin-infinite-scroller-buffer-offset: 20%;
+        --vcf-enhanced-infinite-scroller-buffer-offset: 20%;
         -webkit-mask-image: linear-gradient(transparent, #000 10%, #000 85%, transparent);
         mask-image: linear-gradient(transparent, #000 10%, #000 85%, transparent);
         position: relative;
@@ -47,7 +47,7 @@
 
       [part="years"] {
         /* TODO get rid of fixed magic number */
-        --vaadin-infinite-scroller-buffer-width: 97px;
+        --vcf-enhanced-infinite-scroller-buffer-width: 97px;
         width: 57px;
         height: auto;
         top: 0;
@@ -75,7 +75,7 @@
         display: block;
       }
 
-      /* TODO unsupported selector, should fix this in vaadin-date-picker that it adapts to the
+      /* TODO unsupported selector, should fix this in vcf-enhanced-date-picker that it adapts to the
        * width of the year scroller */
       #scrollers[desktop] [part="months"] {
         right: auto;
@@ -188,7 +188,7 @@
         content: none;
       }
 
-      /* TODO magic number (same as used for iron-media-query in vaadin-date-picker-overlay-content) */
+      /* TODO magic number (same as used for iron-media-query in vcf-enhanced-date-picker-overlay-content) */
       @media screen and (max-width: 374px) {
         :host {
           background-image: none;
@@ -205,7 +205,7 @@
 
         /* TODO make date-picker adapt to the width of the years part */
         [part="years"] {
-          --vaadin-infinite-scroller-buffer-width: 90px;
+          --vcf-enhanced-infinite-scroller-buffer-width: 90px;
           width: 50px;
         }
 
