--- a/theme/lumo/vcf-enhanced-date-picker-styles.html
+++ b/theme/lumo/vcf-enhanced-date-picker-styles.html
@@ -3,7 +3,7 @@
 
 <link rel="import" href="../../../vaadin-text-field/theme/lumo/vaadin-text-field.html">
 
-<dom-module id="lumo-date-picker" theme-for="vaadin-date-picker">
+<dom-module id="lumo-date-picker" theme-for="vcf-enhanced-date-picker">
   <template>
     <style include="lumo-field-button">
       :host {
