--- a/theme/material/vcf-enhanced-date-picker-styles.html
+++ b/theme/material/vcf-enhanced-date-picker-styles.html
@@ -1,13 +1,13 @@
-<link rel="import" href="vaadin-date-picker-overlay.html">
-<link rel="import" href="vaadin-date-picker-overlay-content.html">
-<link rel="import" href="vaadin-month-calendar.html">
+<link rel="import" href="vcf-enhanced-date-picker-overlay.html">
+<link rel="import" href="vcf-enhanced-date-picker-overlay-content.html">
+<link rel="import" href="vcf-enhanced-month-calendar.html">
 <link rel="import" href="../../../vaadin-text-field/theme/material/vaadin-text-field.html">
 
 <link rel="import" href="../../../vaadin-material-styles/color.html">
 <link rel="import" href="../../../vaadin-material-styles/font-icons.html">
 <link rel="import" href="../../../vaadin-material-styles/mixins/field-button.html">
 
-<dom-module id="material-date-picker" theme-for="vaadin-date-picker">
+<dom-module id="material-date-picker" theme-for="vcf-enhanced-date-picker">
   <template>
     <style include="material-field-button">
       :host {
